style(*): unify codebase convention